deployment file updated

--- a/Deployments/voting-app-deployment.yaml
+++ b/Deployments/voting-app-deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: voting-app-deploy
+  labels:
+    name: voting-app-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
@@ -15,7 +18,7 @@ spec:
       app: demo-voting-app
     spec:
       containers:
-      - name: voting-app-pod
-        image: kodekloud/examplevotingapp_vote:v1
-        ports:
-          - containerPort: 80
+        - name: voting-app-pod
+          image: kodekloud/examplevotingapp_vote:v1
+          ports:
+            - containerPort: 80
