--- a/Deployments/postgres-deployment.yaml
+++ b/Deployments/postgres-deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deploy
+  labels:
+    name: postgres-app-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
