--- a/Deployments/redit-deplyment.yaml
+++ b/Deployments/redit-deplyment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-deploy
+  labels:
+    name: redis-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
