--- a/Deployments/result-app-deployment.yaml
+++ b/Deployments/result-app-deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: result-app-deploy
+  labels:
+    name: result-app-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
