--- a/Deployments/worker-app-deployment.yaml
+++ b/Deployments/worker-app-deployment.yaml
@@ -1,7 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: worker-deploy
+  name: worker-app-deploy
+  labels:
+    name: worker-app-deploy
+    app: demo-voting-app
 spec:
   selector:
     matchLabels:
