--- a/Deployments/postgres-deployment.yaml
+++ b/Deployments/postgres-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     name: postgres-app-deploy
     app: demo-voting-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: postgres-pod
