--- a/Deployments/redit-deplyment.yaml
+++ b/Deployments/redit-deplyment.yaml
@@ -6,6 +6,7 @@ metadata:
     name: redis-deploy
     app: demo-voting-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: redis-pod
