--- a/Deployments/result-app-deployment.yaml
+++ b/Deployments/result-app-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     name: result-app-deploy
     app: demo-voting-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: result-app-pod
