--- a/Deployments/worker-app-deployment.yaml
+++ b/Deployments/worker-app-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     name: worker-app-deploy
     app: demo-voting-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: worker-pod
